<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <name>food-ordering-system</name>
  <url>http://maven.apache.org</url>
  <modules>
    <module>order-service</module>
      <module>common</module>
  </modules>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.1.2</version>
    <relativePath/>
  </parent>


  <groupId>org.example</groupId>
  <artifactId>food-ordering-system</artifactId>
  <version>1.0-SNAPSHOT</version>

  <packaging>pom</packaging>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
    <mockito.version>5.4.0</mockito.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.example</groupId>
        <artifactId>order-domain-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.example</groupId>
        <artifactId>order-application-service</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.example</groupId>
        <artifactId>order-application</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.example</groupId>
        <artifactId>order-dataaccess</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.example</groupId>
        <artifactId>order-messaging</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.example</groupId>
        <artifactId>common-domain</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-logging</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.github.ferstl</groupId>
        <artifactId>depgraph-maven-plugin</artifactId>
        <version>4.0.2</version>
        <configuration>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
